# image_processing_methods

./: .gitignore  README.md
labs/lab_01/: README.md  pyproject.toml
labs/lab_01/examples/: demo_scenario.json
labs/lab_01/report/: main.typ
labs/lab_01/src/image_lab1/: __init__.py  app.py  cli.py
labs/lab_01/src/image_lab1/io/: __init__.py  scenario_loader.py
labs/lab_01/src/image_lab1/math/: __init__.py  brdf.py  geometry.py  optics.py
labs/lab_01/src/image_lab1/models/: __init__.py  results.py  scene.py  vector.py
labs/lab_01/src/image_lab1/report/: __init__.py  exporters.py
labs/lab_01/src/image_lab1/services/: __init__.py  observer_renderer.py  scenario_runner.py
labs/lab_01/src/image_lab1/ui/: __init__.py  main_window.py  render_view.py  visualization.py
labs/lab_01/tests/: test_geometry.py  test_optics.py  test_renderer.py  test_scenario_runner.py
labs/lab_01/tools/: generate_report_assets.py
labs/lab_02/: README.md  pyproject.toml
labs/lab_02/examples/: default_config.json
labs/lab_02/report/: main.typ
labs/lab_02/src/image_lab2/: __init__.py  app.py  cli.py
labs/lab_02/src/image_lab2/io/: config_loader.py
labs/lab_02/src/image_lab2/math/: __init__.py  distributions.py  functions.py
labs/lab_02/src/image_lab2/models/: __init__.py  config.py  results.py
labs/lab_02/src/image_lab2/report/: exporters.py
labs/lab_02/src/image_lab2/services/: estimators.py  experiment_runner.py
labs/lab_02/src/image_lab2/ui/: charts.py  main_window.py
labs/lab_02/tests/: test_distributions.py  test_estimators.py  test_math.py  test_negative_interval.py  test_runner.py
labs/lab_02/tools/: generate_report_assets.py
labs/lab_03/: README.md  (+1 more)
labs/lab_04/: README.md  REPORT_FOR_ME.md  pyproject.toml
labs/lab_04/examples/: default_scene.json  obj_scene.json
labs/lab_04/report/: main.typ
labs/lab_04/src/image_lab4/: __init__.py  app.py  cli.py
labs/lab_04/src/image_lab4/io/: __init__.py  config_loader.py  obj_loader.py
labs/lab_04/src/image_lab4/math/: __init__.py  geometry.py
labs/lab_04/src/image_lab4/models/: __init__.py  results.py  scene.py  vector.py
labs/lab_04/src/image_lab4/report/: __init__.py  exporters.py
labs/lab_04/tests/: test_obj_loader.py  test_path_tracer.py
labs/lab_04/tools/: generate_report_assets.py
(+30 files in other folders)
