[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-processing-lab4"
version = "1.0.0"
description = "Lab 4 project: path tracing renderer with global illumination"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24",
  "PySide6>=6.5",
  "matplotlib>=3.7",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
image-lab4-cli = "image_lab4.cli:main"
image-lab4-gui = "image_lab4.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
